--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.539.0",
     "next": "15.2.1",
     "nextjs-toploader": "^3.8.16",
+    "nuqs": "^1.19.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
