--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/core": "0.37.0",
     "@convex-dev/auth": "^0.0.88",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.1",
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@oslojs/crypto": "^1.0.1",
@@ -26,6 +27,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "dayjs": "^1.11.13",
+    "gsap": "^3.13.0",
     "jotai": "^2.13.1",
     "lucide-react": "^0.539.0",
     "next": "15.2.1",
