--- a/package.json
+++ b/package.json
@@ -21,7 +21,17 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@react-email/render": "^1.2.0",
+    "@tiptap/extension-document": "^3.6.2",
+    "@tiptap/extension-highlight": "^3.6.2",
+    "@tiptap/extension-image": "^3.6.2",
+    "@tiptap/extension-paragraph": "^3.6.2",
+    "@tiptap/extension-text": "^3.6.2",
+    "@tiptap/extension-text-align": "^3.6.2",
+    "@tiptap/pm": "^3.6.2",
+    "@tiptap/react": "^3.6.2",
+    "@tiptap/starter-kit": "^3.6.2",
     "@uploadthing/react": "^7.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,6 +52,7 @@
     "resend": "^6.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tiptap-extension-resizable-image": "^2.0.0",
     "uploadthing": "^7.7.3",
     "zod": "^4.0.17"
   },
