--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.10",
     "@react-email/render": "^1.2.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-document": "^3.6.2",
     "@tiptap/extension-highlight": "^3.6.2",
