--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "gsap": "^3.13.0",
     "jotai": "^2.13.1",
     "lucide-react": "^0.539.0",
-    "next": "15.2.1",
+    "next": "^16.0.10",
     "nextjs-toploader": "^3.8.16",
     "nuqs": "^1.19.1",
     "react": "^19.0.0",
@@ -65,7 +65,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.1",
+    "eslint-config-next": "^16.0.10",
     "react-responsive": "^10.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
